# or-gallery

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-tests.yml  python-typechecks.yml
notebooks/: branch_and_bound.ipynb  dijkstra.ipynb
src/or_algorithms/: branch_and_bound.py  dijkstra.py  dynamic_programming.py  kruskals.py  tsp_genetic_algorithm.py  utils.py
tests/: test_branch_and_bound.py  test_dijkstra.py  test_dynamic_programming.py  test_kruskals.py
