[project]
name = "or_algorithms"
version = "0.0.1"
authors = [
  { name="Paula Fermin Cueto", email="paula.fermin.cueto@gmail.com" },
]
description = "optimization algorithms"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/paulafernalia/theORgallery"
Issues = "https://github.com/paulafernalia/theORgallery/issues"